# point_map_yandex_fastapi_project-

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  server.py
automation/: .gitignore  collections.py  constructor.py
samples/: cookies.sample.json  points.json
