[project]
name = "point-map-yandex-fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.46.0",
    "typer>=0.12.3",
    "pydantic>=2.8.2",
    "rich>=13.7.1",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0"
]

[project.scripts]
yandex-markers = "cli:app"
